2011-04-29  Csaba Osztrogonác  <ossy@webkit.org>

        Remove WML
        https://bugs.webkit.org/show_bug.cgi?id=59678

        [Qt] Remove WML tests from the Skipped list after r85256.

        * platform/qt/Skipped:

2011-04-28  Abhishek Arya  <inferno@chromium.org>

        Reviewed by Nikolas Zimmermann.

        Tests that we do not crash when inline text is removed and we
        try to access layout attributes containing that inline text.
        https://bugs.webkit.org/show_bug.cgi?id=59161

        * svg/text/inline-text-destroy-attributes-crash-expected.txt: Added.
        * svg/text/inline-text-destroy-attributes-crash.xhtml: Added.

2011-04-29  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Add flakey tests to the Skipped list.

        * platform/qt-mac/Skipped:

2011-04-29  Adam Roben  <aroben@apple.com>

        Move some tests that time out in Debug from win-xp/Skipped to win/Skipped

        This will help people who run tests in Debug on Windows 7.

        * platform/win-xp/Skipped: Moved two XHR tests from here...
        * platform/win/Skipped: ...to here.

2011-04-29  Jessie Berlin  <jberlin@apple.com>

        WebKit2 needs layoutTestController.overridePreference.
        https://bugs.webkit.org/show_bug.cgi?id=42197

        Add http/tests/inspector/network/ping.html, which uses overridePreference, to the mac-wk2
        Skipped list to get the bots green.

        * platform/mac-wk2/Skipped:

2011-04-29  Pavel Feldman  <pfeldman@google.com>

        Not reviewed: skip flaky inspector tests on GTK for now.

        * platform/gtk/Skipped:

2011-04-29  Pavel Feldman  <pfeldman@google.com>

        Not reviewed: skip flaky inspector tests for now.

        * platform/mac/Skipped:

2011-04-29  Pavel Feldman  <pfeldman@google.com>

        Reviewed by Yury Semikhatsky.

        Web Inspector: CSS editing breaks when entering "color: rgb(1"
        https://bugs.webkit.org/show_bug.cgi?id=59789
